<resources>
    <!--System-->
    <string name="project_name">Board OCTO</string>
    <string name="paddle_extra" translatable="false">actual_paddle</string>

    <!--Dialog-->
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_permission_request">Permission request</string>
    <string name="dialog_permission_description">The OCTO app needs location permission for its functionality.
        Please, accept the following permission request</string>
    <string name="dialog_next">NEXT</string>
    <string name="dialog_connecting_title">Connecting to </string>
    <string name="dialog_connecting_message">Device validation…</string>
    <string name="dialog_disconnect_title">Bluetooth disconnected</string>
    <string name="dialog_disconnect_message">Ops… Your bluetooth connection was lost, come back to the Main screen and connect with your board again.</string>
    <string name="dialog_disconnect_light_message">Ops… Your bluetooth connection was lost. Please, connect with your board again.</string>
    <string name="dialog_reconnected_title">Are you sure?</string>
    <string name="dialog_reconnected_message">You will be disconnected from your board…</string>
    <string name="dialog_finish_message">If you finish the app your actual paddling will be stopped.</string>
    <string name="dialog_not_connected_light_title">Not connected</string>
    <string name="dialog_not_connected_light_message">You are not connected to your board… Do you want to connect now?</string>
    <string name="dialog_not_connected_light_positive">Start scan</string>
    <string name="dialog_paddle_not_connected_light_message">Go back to the Main screen and connect with your board. </string>


    <!--Progress Dialog-->
    <string name="end_progress_title">Ending paddle…</string>
    <string name="end_progress_message">Saving and rendering…</string>

    <!--Error Dialog-->
    <string name="error_bt_error_title">Bluetooth Error</string>
    <string name="error_bt_not_available">Bluetooth not available. Try with another device.</string>
    <string name="error_bt_not_wanted_title">Bluetooth off</string>
    <string name="error_bt_not_wanted_message">You won\'t be able to connect with your board and some functionalities will be not available until you turn the Bluetooth on.</string>
    <string name="error_bt_scan_disabled_message">It seems that the bluetooth turned off and the scan will not works. Turn it on again and restart the scan.</string>
    <string name="error_ble_not_supported">Bluetooth Low Energy not supported. Try with another device.</string>
    <string name="error_permission_title">Functionality limited</string>
    <string name="error_permission_location_message">Without the location access granted, this app will not work properly. Restart the app and grant this permission or change this configuration at the system Settings.</string>
    <string name="error_permission_storage_message">Without the storage access granted, you can\'t share the Paddle. Click at share again and grant this permission or change this configuration at the system Settings.</string>
    <string name="error_no_location_title">No Location found</string>
    <string name="error_no_location_message">There\'s no location found yet… Try again later.</string>
    <string name="error_provider_location_title">Location not available</string>
    <string name="error_provider_location_message">Sorry, we could not retrieve your location and the OCTO app will not work properly. Check your device\'s settings related to GPS and restart the application to have a correct behavior.</string>
    <string name="error_gps_not_enabled_title">GPS is off</string>
    <string name="error_gps_not_enabled_message">Please, turn on your GPS if you want to get your location and track your Paddle.</string>

    <!--Cool Version Main Screen-->

    <!--  Bluetooth Status -->
    <string name="not_connected">Board not connected…</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected">Connected to the board</string>
    <string name="title_not_connected">Not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning…</string>
    <string name="select_device">Select your board</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found. Please, turn your board device on</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for your board device</string>
    <string name="device_name" translatable="false">Device Name</string>
    <string name="device_addr" translatable="false">Device-ADDR</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="bt_connection_error">Connection error, try again</string>

    <!-- Buttons -->
    <string name="bt_power">On/Off</string>
    <string name="bt_light">Light</string>
    <string name="bt_track">Tracking</string>
    <string name="bt_time">Board On</string>

    <string name="bt_tempin">WATER</string>
    <string name="bt_tempout">AMBIENT</string>
    <string name="bt_bat">BATTERY</string>
    <string name="bt_board">BOARD</string>
    <string name="bt_last">LAST PADDLE</string>
    <string name="bt_hour" translatable="false">HR</string>
    <string name="bt_unknown" translatable="false">---</string>
    <string name="bt_board_on" translatable="false">ON</string>
    <string name="bt_board_off" translatable="false">OFF</string>
    <string name="bt_temp_NA">NA</string>


    <!--Both Screens-->
    <string name="bt_dist" translatable="false">KM</string>
    <string name="bt_kcal" translatable="false">KCAL</string>

    <!--Paddling Screen-->
    <string name="bt_sup">HR:MIN</string>

    <string name="bt_rows">ROWS</string>
    <string name="bt_speed" translatable="false">KM/H</string>

    <!--End of Paddle Screen-->
    <string name="share_loading">Loading…</string>

    <!--Botton Navigation-->
    <string name="bt_stop">STOP</string>
    <string name="bt_pause">PAUSE</string>
    <string name="bt_play">PLAY</string>

    <!--History Screen-->
    <string name="history_prefix">Latest</string>
    <string name="history_suffix">Paddle</string>
    <string name="history_empty">No Paddle History</string>

    <!-- Status Infos -->
    <string name="status" translatable="false">Status</string>

    <string name="light_on">Light On</string>
    <string name="light_off">Light Off</string>

    <string name="tracking">Review your track</string>

    <!-- Navigation Drawer Strings -->
    <string name="drawer_menu">Configure your board</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Navigation Drawer Buttons & Menu (right) -->
    <string name="nav_settings">Settings</string>
    <string name="nav_connect">Connect</string>
    <string name="nav_history">History</string>
    <string name="nav_movie" translatable="false">Tutorial</string>
    <string name="nav_comm">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_contact">Contact</string>


    <!-- Texts & Infos-->
    <string name="share_texts">Shine on the Stand Up Paddle! Meet the board OCTO at: (link)</string>
    <string name="send_share">Share OCTO with:</string>
    <string name="error_share">You don\'t have any apps to share OCTO</string>
    <string name="send_mail">Enter in contact with:</string>
    <string name="error_mail">You don\'t have any e-mail apps to contact us</string>

    <string-array name="email" translatable="false">
        <item>octogestaodeprojetos@gmail.com</item>
    </string-array>
    <string name="subject_mail">Contact from the OCTO app</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_light_settings">Light Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!-- Language settings -->
    <string name="pref_title_languages">Language</string>

    <string name="pref_key_language" translatable="false">lang_key</string>
    <string-array name="pref_general_list_titles" translatable="false">
        <item>English</item>
        <item>Português (Brasil)</item>
    </string-array>
    <string-array name="pref_general_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!--Tutorial preference-->
    <string name="pref_key_has_never_seen_tutorial" translatable="false">has_never_seen_tutorial_key</string>
    <!-- General settings -->
    <string name="pref_title_keep_screen">Keep Screen On</string>
    <string name="pref_title_bcap_enable">Enable Capacitive Button</string>
    <string name="pref_key_keep_screen" translatable="false">keep_screen_key</string>
    <string name="pref_key_bcap_enable" translatable="false">bcap_enable_key</string>

    <!-- Data & Sync settings-->
    <string name="pref_header_data_sync">Board Sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string name="pref_key_sync_frequency" translatable="false">freq_key</string>
    <string-array name="pref_sync_frequency_titles">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <!-- Light settings -->
    <string name="pref_title_enabled">Light Enabled</string>
    <string name="pref_key_light_enabled" translatable="false">light_enabled_key</string>

    <string name="pref_title_mode">Light Mode</string>
    <string name="pref_key_light_mode" translatable="false">light_mode_key</string>
    <string-array name="pref_light_list_titles">
        <item>Always On</item>
        <item>Fade</item>
        <item>Strobe</item>
    </string-array>
    <string-array name="pref_light_list_values">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
    </string-array>

    <string name="pref_title_intensity">Light Intensity</string>
    <string name="pref_key_light_intensity" translatable="false">light_int_key</string>
    <string name="pref_message_intensity">Select the light intensity</string>
    <string name="pref_light_intensity_unit" translatable="false">%</string>
    <string name="pref_light_intensity_summary">Current value: $1%</string>

    <string name="pref_title_threshold">Low Battery Threshold Level</string>
    <string name="pref_key_light_threshold" translatable="false">light_treshold_key</string>
    <string name="pref_message_threshold">Select the low battery threshold level</string>
    <string name="pref_light_threshold_unit" translatable="false">%</string>
    <string name="pref_light_threshold_summary">Current value: $1%</string>

    <string name="pref_title_freq">Light Frequency</string>
    <string name="pref_key_light_freq" translatable="false">light_freq_key</string>
    <string-array name="pref_light_frequency_titles">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string-array name="pref_light_frequency_values">
        <item>"5"</item>
        <item>"3"</item>
        <item>"1"</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Sync Settings</string>


</resources>
