<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_general">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_general_list_titles"
            android:entryValues="@array/pref_general_list_values"
            android:key="@string/pref_key_language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_languages"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_keep_screen"
            android:title="@string/pref_title_keep_screen"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_bcap_enable"
            android:title="@string/pref_title_bcap_enable"/>
    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/pref_header_data_sync">-->

    <!--<ListPreference-->
    <!--android:defaultValue="1"-->
    <!--android:entries="@array/pref_sync_frequency_titles"-->
    <!--android:entryValues="@array/pref_sync_frequency_values"-->
    <!--android:summary="%s"-->
    <!--android:key="@string/pref_key_sync_frequency"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_sync_frequency" />-->

    <!--</PreferenceCategory>-->

</PreferenceScreen>
