<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <!---->
    <!--</group>-->

    <group android:id="@+id/group_top">
        <item
            android:id="@+id/nav_bt"
            android:icon="@drawable/ic_bt"
            android:title="@string/nav_connect" />

        <item
            android:id="@+id/nav_set"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />

        <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

        <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/nav_movie" />
    </group>

    <group android:id="@+id/group_bottom">
        <item
            android:id="@+id/nav_share"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contact" />
    </group>

    <!--<item android:title="@string/nav_comm">-->
        <!--<menu>-->
            <!---->
        <!--</menu>-->
    <!--</item>-->

</menu>
