<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="light_enabled"
        android:title="@string/pref_title_enabled" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:dependency="light_enabled"
        android:defaultValue="0"
        android:entries="@array/pref_light_list_titles"
        android:entryValues="@array/pref_light_list_values"
        android:key="light_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_mode" />

    <ListPreference
        android:defaultValue="15"
        android:entries="@array/pref_light_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="light_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

</PreferenceScreen>
